syntax="proto3";
option csharp_namespace = "Common.Protobuf";

import "Common/Protos/CustomerOrder.proto";

service Orders {
    rpc NewOrder (NewOrderRequest) returns (NewOrderResponse);
}

message NewOrderRequest {
    CustomerOrder Order = 1;
}

message OrderDto {
    int64 Id = 1;
    string Item = 2;
    int32 Quantity = 3;
    double Amount = 4;
    string Status = 5;
}

message NewOrderResponse {
    OrderDto Order = 1;
}
